--- a/samples/android/SConscript
+++ b/samples/android/SConscript
@@ -40,6 +40,10 @@ for sample in ['simple/client',
         env.Install('$DISTDIR/samples/%s/libs/armeabi' % sample, '$DISTDIR/lib/liballjoyn_java.so')
         #make sure the samples are using the most recent version of the library
         env.Install('%s/libs/armeabi' % sample, '$DISTDIR/lib/liballjoyn_java.so')
+    elif env['OS'] == 'android' and env['CPU'] == 'arm6':
+        env.Install('$DISTDIR/samples/%s/libs/armeabi' % sample, '$DISTDIR/lib/liballjoyn_java.so')
+        #make sure the samples are using the most recent version of the library
+        env.Install('%s/libs/armeabi' % sample, '$DISTDIR/lib/liballjoyn_java.so')
     elif env['OS'] == 'android' and env['CPU'] == 'arm':
         env.Install('$DISTDIR/samples/%s/libs/armeabi-v7a' % sample, '$DISTDIR/lib/liballjoyn_java.so')
         env.Install('%s/libs/armeabi-v7a' % sample, '$DISTDIR/lib/liballjoyn_java.so')
@@ -58,6 +62,11 @@ env.Install(build_dir + '/test',
 env.Install(build_dir + '/test/libs', '$JARDIR/alljoyn.jar')
 env.Install(build_dir + '/test/libs', '$JARDIR/alljoyn_test.jar')
 if env['OS'] == 'android' and env['CPU'] == 'arm5':
+    env.Install(build_dir + '/test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
+    env.Install('./test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
+    env.Install('./test/libs', '$JARDIR/alljoyn.jar')
+    env.Install('./test/libs', '$JARDIR/alljoyn_test.jar')
+elif env['OS'] == 'android' and env['CPU'] == 'arm6':
     env.Install(build_dir + '/test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
     env.Install('./test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
     env.Install('./test/libs', '$JARDIR/alljoyn.jar')
