--- a/samples/android/SConscript
+++ b/samples/android/SConscript
@@ -36,17 +36,9 @@ for sample in ['simple/client',
                  '%s/src' % sample])
     env.Install('$DISTDIR/samples/%s/libs' % sample, '$JARDIR/alljoyn.jar')
     env.Install('%s/libs' % sample, '$JARDIR/alljoyn.jar')
-    if env['OS'] == 'android' and env['CPU'] == 'arm5':
+    if env['OS'] == 'android' and env['CPU'] == 'arm':
         env.Install('$DISTDIR/samples/%s/libs/armeabi' % sample, '$DISTDIR/lib/liballjoyn_java.so')
-        #make sure the samples are using the most recent version of the library
         env.Install('%s/libs/armeabi' % sample, '$DISTDIR/lib/liballjoyn_java.so')
-    elif env['OS'] == 'android' and env['CPU'] == 'arm6':
-        env.Install('$DISTDIR/samples/%s/libs/armeabi' % sample, '$DISTDIR/lib/liballjoyn_java.so')
-        #make sure the samples are using the most recent version of the library
-        env.Install('%s/libs/armeabi' % sample, '$DISTDIR/lib/liballjoyn_java.so')
-    elif env['OS'] == 'android' and env['CPU'] == 'arm':
-        env.Install('$DISTDIR/samples/%s/libs/armeabi-v7a' % sample, '$DISTDIR/lib/liballjoyn_java.so')
-        env.Install('%s/libs/armeabi-v7a' % sample, '$DISTDIR/lib/liballjoyn_java.so')
 
 env.Install('$DISTDIR/samples', 'README.txt')
 
@@ -61,18 +53,8 @@ env.Install(build_dir + '/test',
              'test/src'])
 env.Install(build_dir + '/test/libs', '$JARDIR/alljoyn.jar')
 env.Install(build_dir + '/test/libs', '$JARDIR/alljoyn_test.jar')
-if env['OS'] == 'android' and env['CPU'] == 'arm5':
+if env['OS'] == 'android' and env['CPU'] == 'arm':
     env.Install(build_dir + '/test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
-    env.Install('./test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
-    env.Install('./test/libs', '$JARDIR/alljoyn.jar')
-    env.Install('./test/libs', '$JARDIR/alljoyn_test.jar')
-elif env['OS'] == 'android' and env['CPU'] == 'arm6':
-    env.Install(build_dir + '/test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
-    env.Install('./test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
-    env.Install('./test/libs', '$JARDIR/alljoyn.jar')
-    env.Install('./test/libs', '$JARDIR/alljoyn_test.jar')
-elif env['OS'] == 'android' and env['CPU'] == 'arm':
-    env.Install(build_dir + '/test/libs/armeabi-v7a', '$DISTDIR/lib/liballjoyn_java.so')
     env.Install('./test/libs/armeabi-v7a', '$DISTDIR/lib/liballjoyn_java.so')
     env.Install('./test/libs', '$JARDIR/alljoyn.jar')
     env.Install('./test/libs', '$JARDIR/alljoyn_test.jar')
