Fixed issue that prevented the junit test running in the Android emulator.
The liballjoyn_java.so was being placed in the armeabi-v7a folder for the junit tests.  The test would run as expected on anything that used ARM7  but would not run in the emulator that uses ARM5. By placing the liballjoyn_java.so file in the armeabi folder it will run on all the phones and the emulator.

--- a/samples/android/SConscript
+++ b/samples/android/SConscript
@@ -55,7 +55,7 @@ env.Install(build_dir + '/test/libs', '$JARDIR/alljoyn.jar')
 env.Install(build_dir + '/test/libs', '$JARDIR/alljoyn_test.jar')
 if env['OS'] == 'android' and env['CPU'] == 'arm':
     env.Install(build_dir + '/test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
-    env.Install('./test/libs/armeabi-v7a', '$DISTDIR/lib/liballjoyn_java.so')
+    env.Install('./test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
     env.Install('./test/libs', '$JARDIR/alljoyn.jar')
     env.Install('./test/libs', '$JARDIR/alljoyn_test.jar')
    
