ALLJOYN-410 Updated the alljoyn Linux Java samples to compile and run for sessions.

--- a/samples/java/SConscript
+++ b/samples/java/SConscript
@@ -15,11 +15,11 @@
 
 Import('env')
 
-#sample_classes = env.Java('$CLASSDIR', '.', JAVACLASSPATH=env.GetBuildPath(env.subst('$JARDIR/alljoyn.jar')))
-#env.Jar('$JARDIR/alljoyn_samples.jar', sample_classes)
-#env.Requires(sample_classes, '$JARDIR/alljoyn.jar')
-#
-#for sample in ['addressbook', 'game', 'props', 'simple']:
-#    env.Install('$DISTDIR/samples', sample)
-#
-#env.Install('$DISTDIR/samples', 'README.txt')
+sample_classes = env.Java('$CLASSDIR', '.', JAVACLASSPATH=env.GetBuildPath(env.subst('$JARDIR/alljoyn.jar')))
+env.Jar('$JARDIR/alljoyn_samples.jar', sample_classes)
+env.Requires(sample_classes, '$JARDIR/alljoyn.jar')
+
+for sample in ['addressbook', 'game', 'props', 'simple']:
+    env.Install('$DISTDIR/samples', sample)
+
+env.Install('$DISTDIR/samples', 'README.txt')
