--- a/samples/android/SConscript
+++ b/samples/android/SConscript
@@ -27,20 +27,20 @@ for sample in ['simple/client',
                'properties/PropertiesService',
                'contacts/ContactsClient',
                'contacts/ContactsService']:
-    env.Install('$DISTDIR/samples/%s' % sample, 
+    env.Install('$JAVA_DISTDIR/samples/%s' % sample, 
                 ['%s/AndroidManifest.xml' % sample,
                  '%s/.classpath' % sample,
                  '%s/default.properties' % sample,
                  '%s/.project' % sample,
                  '%s/res' % sample,
                  '%s/src' % sample])
-    env.Install('$DISTDIR/samples/%s/libs' % sample, '$JARDIR/alljoyn.jar')
+    env.Install('$JAVA_DISTDIR/samples/%s/libs' % sample, '$JARDIR/alljoyn.jar')
     env.Install('%s/libs' % sample, '$JARDIR/alljoyn.jar')
     if env['OS'] == 'android' and env['CPU'] == 'arm':
-        env.Install('$DISTDIR/samples/%s/libs/armeabi' % sample, '$DISTDIR/lib/liballjoyn_java.so')
-        env.Install('%s/libs/armeabi' % sample, '$DISTDIR/lib/liballjoyn_java.so')
+        env.Install('$JAVA_DISTDIR/samples/%s/libs/armeabi' % sample, '$JAVA_DISTDIR/lib/liballjoyn_java.so')
+        env.Install('%s/libs/armeabi' % sample, '$JAVA_DISTDIR/lib/liballjoyn_java.so')
 
-env.Install('$DISTDIR/samples', 'README.txt')
+env.Install('$JAVA_DISTDIR/samples', 'README.txt')
 
 # Unit test runner
 build_dir = '#build/${OS}/${CPU}/${VARIANT}'
@@ -54,8 +54,8 @@ env.Install(build_dir + '/test',
 env.Install(build_dir + '/test/libs', '$JARDIR/alljoyn.jar')
 env.Install(build_dir + '/test/libs', '$JARDIR/alljoyn_test.jar')
 if env['OS'] == 'android' and env['CPU'] == 'arm':
-    env.Install(build_dir + '/test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
-    env.Install('./test/libs/armeabi', '$DISTDIR/lib/liballjoyn_java.so')
+    env.Install(build_dir + '/test/libs/armeabi', '$JAVA_DISTDIR/lib/liballjoyn_java.so')
+    env.Install('./test/libs/armeabi', '$JAVA_DISTDIR/lib/liballjoyn_java.so')
     env.Install('./test/libs', '$JARDIR/alljoyn.jar')
     env.Install('./test/libs', '$JARDIR/alljoyn_test.jar')
    
