--- a/samples/android/SConscript
+++ b/samples/android/SConscript
@@ -18,6 +18,7 @@ Import('env')
 # Application samples
 for sample in ['simple/client', 
                'simple/service', 
+               'irc', 
                'raw/client', 
                'raw/service', 
                'secure/logonclient', 
