fix junit-android.conf so that JUnit test with alljoyn-daemon will work on Android emulator

--- a/test_report/junit-android.conf
+++ b/test_report/junit-android.conf
@@ -24,7 +24,7 @@
   <syslog/>
 
   <listen>unix:abstract=alljoyn</listen>
-  <listen>bluetooth:</listen>
+  <!-- do not listen on bluetooth: it breaks android emulator -->
   <listen>tcp:addr=0.0.0.0,port=5342</listen>
 
   <!-- Allow everything, D-Bus socket is protected by unix filesystem
