add jni path to get buildbot build working

--- a/alljoyn_android/SConscript
+++ b/alljoyn_android/SConscript
@@ -21,6 +21,7 @@ env.Install('$JAVA_DISTDIR/alljoyn_android/alljoyn', [ 'alljoyn/AndroidManifest.
                                                        'alljoyn/default.properties', 
                                                        'alljoyn/.project', 
                                                        'alljoyn/res',
+                                                       'alljoyn/jni',
                                                        'alljoyn/src'])
 env.Install('$JAVA_DISTDIR/alljoyn_android/alljoyn/libs', '$JARDIR/alljoyn.jar')
 env.Install('alljoyn/libs', '$JARDIR/alljoyn.jar')
