--- a/samples/android/SConscript
+++ b/samples/android/SConscript
@@ -44,6 +44,17 @@ for sample in ['simple/client',
 
 env.Install('$JAVA_DISTDIR/samples', 'README.txt')
 
+# install the alljoyn_java.jar and liballjoyn_java.so into the shared 
+# keystore samples at this time the shared keystore samples are not being placed
+# in the dist folder if they are the samples could be moved into the Application 
+# samples loop shown above.
+for sample in ['secure/sharedks/service',
+               'secure/sharedks/srpclientA',
+               'secure/sharedks/srpclientB']:
+    if env['OS'] == 'android' and env['CPU'] == 'arm':
+        env.Install('%s/libs' % sample, '$JARDIR/alljoyn.jar')
+        env.Install('%s/libs/armeabi' % sample, '$JAVA_DISTDIR/lib/liballjoyn_java.so')
+
 # Unit test runner
 build_dir = '#build/${OS}/${CPU}/${VARIANT}'
 env.Install(build_dir + '/test', 
