Large collection of samples that were developed for the Java SDK Guide

--- a/samples/java/SConscript
+++ b/samples/java/SConscript
@@ -15,11 +15,14 @@
 
 Import('env')
 
-sample_classes = env.Java('$CLASSDIR', '.', JAVACLASSPATH=env.GetBuildPath(env.subst('$JARDIR/alljoyn.jar')))
+samples = ['addressbook', 'game', 'props', 'simple']
+
+sample_classes = env.Java('$CLASSDIR' ,samples ,JAVACLASSPATH=env.GetBuildPath(env.subst('$JARDIR/alljoyn.jar')))
+
 env.Jar('$JARDIR/alljoyn_samples.jar', sample_classes)
 env.Requires(sample_classes, '$JARDIR/alljoyn.jar')
 
-for sample in ['addressbook', 'game', 'props', 'simple']:
+for sample in samples:
     env.Install('$JAVA_DISTDIR/samples', sample)
 
 env.Install('$JAVA_DISTDIR/samples', 'README.txt')
