--- a/samples/android/chat/AndroidManifest.xml
+++ b/samples/android/chat/AndroidManifest.xml
@@ -1,19 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.alljoyn.bus.sample.chat"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".AllJoynChat"
-                  android:label="@string/app_name"
-                  android:screenOrientation="portrait">
+    package="org.alljoyn.bus.sample.chat"
+    android:versionCode="1"
+    android:versionName="1.0">
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:name=".ChatApplication">
+
+        <activity
+            android:name=".TabWidget"
+            android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <activity 
+            android:name=".HostActivity" 
+            android:windowSoftInputMode="adjustResize"
+            android:label="AllJoyn Chat Channel Hosting">
+        </activity>
+
+        <activity 
+            android:name=".UseActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:label="AllJoyn Chat Channel Usage">
+        </activity>
+        
+        <service
+            android:name="AllJoynService">
+        </service>service>
+        
     </application>
-
-
 </manifest> 
