ALLJOYN-698 Changed SConscript so it checked against env['OS_GROUP'] not env['OS'] fixed issue that was preventing samples building in windows.

--- a/samples/SConscript
+++ b/samples/SConscript
@@ -17,5 +17,5 @@ Import('env')
 
 if env['OS'] == 'android':
     env.SConscript('android/SConscript')
-elif env['OS'] == 'linux' or env['OS'] == 'windows':
+elif env['OS'] == 'linux' or env['OS_GROUP'] == 'windows':
     env.SConscript('java/SConscript')
