--- a/samples/android/chat/AndroidManifest.xml
+++ b/samples/android/chat/AndroidManifest.xml
@@ -3,6 +3,12 @@
     package="org.alljoyn.bus.sample.chat"
     android:versionCode="1"
     android:versionName="1.0">
+    <!-- Permission required to use the TCP transport -->
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"></uses-permission>
+    <!-- Permission required to use the Bluetooth transport -->
+    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>    
 
     <application
         android:icon="@drawable/icon"
