--- a/samples/android/properties/PropertiesClient/AndroidManifest.xml
+++ b/samples/android/properties/PropertiesClient/AndroidManifest.xml
@@ -3,6 +3,12 @@
       package="org.alljoyn.bus.samples.properties_client"
       android:versionCode="1"
       android:versionName="1.0">
+    <!-- Permission required to use the TCP transport -->
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"></uses-permission>
+    <!-- Permission required to use the Bluetooth transport -->
+    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>      
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".PropertiesClient"
                   android:label="@string/app_name"
