--- a/samples/android/properties/PropertiesService/AndroidManifest.xml
+++ b/samples/android/properties/PropertiesService/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
       android:versionName="1.0" package="org.alljoyn.bus.samples.properties_service">
+    <!-- Permission required to use the TCP transport -->
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"></uses-permission>
+    <!-- Permission required to use the Bluetooth transport -->
+    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>      
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".PropertiesService"
                   android:label="@string/app_name"
