--- a/samples/android/simple/service/AndroidManifest.xml
+++ b/samples/android/simple/service/AndroidManifest.xml
@@ -3,6 +3,12 @@
       package="org.alljoyn.bus.samples.simpleservice"
       android:versionCode="1"
       android:versionName="1.0">
+    <!-- Permission required to use the TCP transport -->
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"></uses-permission>
+	<!-- Permission required to use the Bluetooth transport -->
+	<uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".Service"
                   android:label="@string/app_name"
@@ -12,8 +18,5 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
-
-
 </manifest> 
