--- a/samples/java/JavaSDKDoc/JavaSDKDocSecurityLogonClient/.classpath
+++ b/samples/java/JavaSDKDoc/JavaSDKDocSecurityLogonClient/.classpath
@@ -2,10 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="alljoyn.jar">
+	<classpathentry kind="lib" path="C:/Users/georgen/workspace/master/build/win7/IA64/debug/dist/java/jar/alljoyn.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="https://www.alljoyn.org/docs/java/"/>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="JavaSDKDocSecurityLogonClient/lib"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="JavaSDKDocSecurityLogonClient/alljoyn_lib"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
