Changed JavaSDKDoc samples so they would build when using Java 1.5
the samples were developed using the 1.6 JDK some code was used that did not compile in the 1.5 JDK.  The code has been changed so it should compile with both versions of Java.

--- a/samples/java/SConscript
+++ b/samples/java/SConscript
@@ -28,4 +28,4 @@ for sample in samples:
 
 env.Install('$JAVA_DISTDIR/samples', 'README.txt')
 
-#env.SConscript('JavaSDKDoc/SConscript')
+env.SConscript('JavaSDKDoc/SConscript')
