--- a/samples/android/contacts/ContactsClient/AndroidManifest.xml
+++ b/samples/android/contacts/ContactsClient/AndroidManifest.xml
@@ -21,4 +21,6 @@
         </activity>
     </application>
     <uses-sdk android:minSdkVersion="7" />
+    <!-- The application indirectly uses resources that requires this permission -->
+    <uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission>
 </manifest> 
