--- a/samples/android/secure/sharedks/service/AndroidManifest.xml
+++ b/samples/android/secure/sharedks/service/AndroidManifest.xml
@@ -4,6 +4,14 @@
       android:sharedUserId="org.alljoyn.bus.sample.centralks"
       android:versionCode="1"
       android:versionName="1.0">
+    
+    <!-- Permission required to use the TCP transport -->
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"></uses-permission>
+    <!-- Permission required to use the Bluetooth transport -->
+    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
+    
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="Service"
                   android:label="@string/app_name"
