Daemon-side transport factoring. Fix JUnit test script on Windows.

--- a/test_report/junit-win.conf
+++ b/test_report/junit-win.conf
@@ -2,7 +2,7 @@
  "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
 <busconfig>
   <!--
-	  Copyright 2010 - 2011, Qualcomm Innovation Center, Inc.
+	  Copyright 2010 - 2012, Qualcomm Innovation Center, Inc.
 	  
 	  Licensed under the Apache License, Version 2.0 (the "License");
 	  you may not use this file except in compliance with the License.
@@ -24,7 +24,7 @@
        means use abstract namespace, don't really create filesystem
        file; only Linux supports this. Use path=/whatever on other
        systems.) -->
-  <listen>tcp:addr=127.0.0.1,port=5342</listen>
+  <listen>localhost:port=5342;tcp:addr=127.0.0.1,port=5343,family=ipv4</listen>
 
   <!-- Allow everything, D-Bus socket is protected by unix filesystem
        permissions -->
