--- a/samples/android/SConscript
+++ b/samples/android/SConscript
@@ -56,20 +56,19 @@ for sample in ['secure/sharedks/service',
         env.Install('%s/libs/armeabi' % sample, '$JAVA_DISTDIR/lib/liballjoyn_java.so')
 
 # Unit test runner
-build_dir = '#build/${OS}/${CPU}/${VARIANT}'
-env.Install(build_dir + '/test', 
+env.Install('$JAVA_TESTDIR',
             ['test/AndroidManifest.xml',
              'test/.classpath',
              'test/default.properties',
              'test/.project',
              'test/res',
              'test/src'])
-env.Install(build_dir + '/test/libs', '$JARDIR/alljoyn.jar')
-env.Install(build_dir + '/test/libs', '$JARDIR/alljoyn_test.jar')
+env.Install('$JAVA_TESTDIR' + '/libs', '$JARDIR/alljoyn.jar')
+env.Install('$JAVA_TESTDIR' + '/libs', '$JARDIR/alljoyn_test.jar')
 if env['OS'] == 'android' and env['CPU'] == 'arm':
-    env.Install(build_dir + '/test/libs/armeabi', '$JAVA_DISTDIR/lib/liballjoyn_java.so')
+    env.Install('$JAVA_TESTDIR' + '/libs/armeabi', '$JAVA_DISTDIR/lib/liballjoyn_java.so')
     env.Install('./test/libs/armeabi', '$JAVA_DISTDIR/lib/liballjoyn_java.so')
     env.Install('./test/libs', '$JARDIR/alljoyn.jar')
     env.Install('./test/libs', '$JARDIR/alljoyn_test.jar')
-   
+
  
