--- a/src/SConscript
+++ b/src/SConscript
@@ -25,3 +25,7 @@ JavaStatus('org/alljoyn/bus/Status')
 # AllJoyn Java binding
 main_classes = env.Java('$CLASSDIR', '.', JAVACLASSPATH=os.environ.get('CLASSPATH'))
 env.Jar('$JARDIR/alljoyn.jar', main_classes)
+
+if env['VARIANT'] == 'debug' :
+	# get a listing of the sources
+	env.Jar('$JARDIR/alljoyn-sources.jar', '.')
