--- a/src/SConscript
+++ b/src/SConscript
@@ -24,8 +24,9 @@ JavaStatus('org/alljoyn/bus/Status')
 
 # AllJoyn Java binding
 main_classes = env.Java('$CLASSDIR', '.', JAVACLASSPATH=os.environ.get('CLASSPATH'))
-env.Jar('$JARDIR/alljoyn.jar', main_classes)
+alljoyn_jar = env.Jar('$JARDIR/alljoyn.jar', main_classes)
 
 if env['VARIANT'] == 'debug' :
-	# get a listing of the sources
-	env.Jar('$JARDIR/alljoyn-sources.jar', '.')
+    # get a listing of the sources
+    env.Jar('$JARDIR/alljoyn-sources.jar', '.')
+Return('alljoyn_jar')
