Modifications to the eclipse .classpath project file based on feedback No longer use the JUnit specified by the CLASSPATH environment variable we now use the eclipse's built in JUnit library.

--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="bin/jar/junit.jar"/>
 	<classpathentry kind="lib" path="bin/jar/alljoyn.jar" sourcepath="src">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="alljoyn_java/bin/libs"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
