--- a/src/SConscript
+++ b/src/SConscript
@@ -18,10 +18,19 @@ import sys
 sys.path.append('../../build_core/tools/scons')
 from javastatus import JavaStatus
 Import('env')
+from os.path import basename
 
 # AllJoyn Java status codes
 JavaStatus('org/alljoyn/bus/Status')
 
 # AllJoyn Java binding
-main_classes = env.Java('$CLASSDIR', '.', JAVACLASSPATH=os.environ.get('CLASSPATH'))
+
+#If we are on Linux and Windows
+if env['OS_GROUP'] == 'posix': 
+	proximity_srcs = [ 'AllJoynAndroidExt.java', 'ScanResultMessage.java', 'ScanResultsReceiver.java' ]
+	main_srcs = env.Java('$CLASSDIR', '.', JAVACLASSPATH=os.environ.get('CLASSPATH'))
+	main_classes = [ f for f in main_srcs if basename(str(f)) not in proximity_srcs ]
+if env['OS_GROUP'] == 'android':
+	main_classes = env.Java('$CLASSDIR', '.', JAVACLASSPATH=os.environ.get('CLASSPATH'))
+	
 env.Jar('$JARDIR/alljoyn.jar', main_classes)
