--- a/test/SConscript
+++ b/test/SConscript
@@ -19,6 +19,6 @@ Import('env')
 
 # AllJoyn Java binding
 test_classes = env.Java('$CLASSDIR', '.', JAVACLASSPATH=os.pathsep.join(
-        [os.environ.get('CLASSPATH'), env.GetBuildPath(env.subst('$JARDIR/alljoyn.jar'))]))
+        [env.subst('$JAVACLASSPATH'), env.GetBuildPath(env.subst('$JARDIR/alljoyn.jar'))]))
 env.Jar('$JARDIR/alljoyn_test.jar', test_classes)
 env.Requires(test_classes, '$JARDIR/alljoyn.jar')
