P2P: WFD bundled daemon support
Change-Id: I65a2bb29ad832794a86c8f714e404217648a5ded

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ libs
 .metadata
 test_report/reports
 MANIFEST.MF
+#jni/P2pHelperService.cc
+#p2p/org/alljoyn/bus/p2p/service/P2pHelperService.java
+#p2p/org/alljoyn/bus/p2p/service/P2pInterface.java
+#p2p/org/alljoyn/bus/p2p/service/P2pManager.java
+#p2p/org/alljoyn/bus/p2p/service/P2pReceiver.java
