--- a/src/SConscript
+++ b/src/SConscript
@@ -1,4 +1,4 @@
-# Copyright 2010 - 2011, Qualcomm Innovation Center, Inc.
+# Copyright 2010 - 2012, Qualcomm Innovation Center, Inc.
 # 
 #    Licensed under the Apache License, Version 2.0 (the "License");
 #    you may not use this file except in compliance with the License.
@@ -25,9 +25,19 @@ JavaStatus('org/alljoyn/bus/Status')
 # AllJoyn Java binding
 #If we are on Linux and Windows
 if env['OS'] == 'android':
+        # Get P2P java files from core
+	#p2p_sources = env.Install('../p2p/org/alljoyn/bus/p2p/service', '../../alljoyn_core/alljoyn_android/alljoyn_android_p2pservice/src/org/alljoyn/bus/p2p/service/P2pHelperService.java')
+	#p2p_sources += env.Install('../p2p/org/alljoyn/bus/p2p/service', '../../alljoyn_core/alljoyn_android/alljoyn_android_p2pservice/src/org/alljoyn/bus/p2p/service/P2pManager.java')
+	#p2p_sources += env.Install('../p2p/org/alljoyn/bus/p2p/service', '../../alljoyn_core/alljoyn_android/alljoyn_android_p2pservice/src/org/alljoyn/bus/p2p/service/P2pInterface.java')
+	#p2p_sources += env.Install('../p2p/org/alljoyn/bus/p2p/service', '../../alljoyn_core/alljoyn_android/alljoyn_android_p2pservice/src/org/alljoyn/bus/p2p/service/P2pReceiver.java')
+
 	main_classes = env.Java('$CLASSDIR', source = ['.'], JAVACLASSPATH=env.subst('$JAVACLASSPATH'))
+	p2p_classes = env.Java('$CLASSDIR', source = ['../p2p'], JAVACLASSPATH=env.subst('$JAVACLASSPATH'), JAVAVERSION='1.6')
 	proximity_classes = env.Java('$CLASSDIR', source = ['../ice'], JAVACLASSPATH=env.subst('$JAVACLASSPATH'))
-	alljoyn_jar = env.Jar('$JARDIR/alljoyn.jar', source = [main_classes,proximity_classes])
+
+	#env.Depends(p2p_classes, p2p_sources)
+
+	alljoyn_jar = env.Jar('$JARDIR/alljoyn.jar', source = [main_classes,p2p_classes,proximity_classes])
 
 if (env['OS'] == 'linux' or env['OS_GROUP'] == 'windows'):
 	main_classes = env.Java('$CLASSDIR', source = ['.'], JAVACLASSPATH=env.subst('$JAVACLASSPATH'))
