--- a/jni/SConscript
+++ b/jni/SConscript
@@ -1,4 +1,4 @@
-# Copyright 2010 - 2011, Qualcomm Innovation Center, Inc.
+# Copyright 2010 - 2012, Qualcomm Innovation Center, Inc.
 # 
 #    Licensed under the Apache License, Version 2.0 (the "License");
 #    you may not use this file except in compliance with the License.
@@ -16,7 +16,11 @@
 Import('env')
 
 # JNI library sources
-srcs = env.Glob('*.cc')
+srcs = ['alljoyn_java.cc']
+
+if env['OS'] == 'android':
+	srcs += ['P2pHelperService.cc']
+
 objs = env.SharedObject(srcs)
 
 # JNI library
