Sessions test application added.
The Sessions test application can be used for testing WFD on Bundled Daemon. However, the application is generic,
and can be modified to suit other transports, as well.

Change-Id: I387ceda9b134c5462e977840160ff0d90ad0ae3f

--- a/samples/android/SConscript
+++ b/samples/android/SConscript
@@ -51,7 +51,8 @@ env.Install('$JAVA_DISTDIR/samples', 'README.txt')
 # samples loop shown above.
 for sample in ['secure/sharedks/service',
                'secure/sharedks/srpclientA',
-               'secure/sharedks/srpclientB']:
+               'secure/sharedks/srpclientB',
+               'sessions']:
     if env['OS'] == 'android' and env['CPU'] == 'arm':
         env.Install('%s/libs' % sample, '$JARDIR/alljoyn.jar')
         env.Install('%s/libs/armeabi' % sample, '$JAVA_DISTDIR/lib/liballjoyn_java.so')
