--- a/jni/SConscript
+++ b/jni/SConscript
@@ -18,8 +18,8 @@ Import('env')
 # JNI library sources
 srcs = ['alljoyn_java.cc']
 
-if env['OS'] == 'android':
-	srcs += ['P2pHelperService.cc']
+#if env['OS'] == 'android':
+#	srcs += ['P2pHelperService.cc']
 
 objs = env.SharedObject(srcs)
 
