--- a/samples/java/JavaSDKDoc/SConscript
+++ b/samples/java/JavaSDKDoc/SConscript
@@ -1,4 +1,4 @@
-# Copyright 2011, Qualcomm Innovation Center, Inc.
+# Copyright 2011, 2013, Qualcomm Innovation Center, Inc.
 # 
 #    Licensed under the Apache License, Version 2.0 (the "License");
 #    you may not use this file except in compliance with the License.
@@ -15,16 +15,19 @@
 
 Import('env')
 
-env.SConscript('JavaSDKDocMethodsClient/SConscript')
-env.SConscript('JavaSDKDocMethodsService/SConscript')
-env.SConscript('JavaSDKDocPropertiesClient/SConscript')
-env.SConscript('JavaSDKDocPropertiesService/SConscript')
-env.SConscript('JavaSDKDocSecurityLogonClient/SConscript')
-env.SConscript('JavaSDKDocSecurityLogonService/SConscript')
-env.SConscript('JavaSDKDocSecurityRsaClient/SConscript')
-env.SConscript('JavaSDKDocSecurityRsaClient2/SConscript')
-env.SConscript('JavaSDKDocSecurityRsaService/SConscript')
-env.SConscript('JavaSDKDocSecuritySRPClient/SConscript')
-env.SConscript('JavaSDKDocSecuritySRPService/SConscript')
-env.SConscript('JavaSDKDocSignalClient/SConscript')
-env.SConscript('JavaSDKDocSignalService/SConscript')
+# The return value is the collection of files installed in the build destination.
+returnValue = env.SConscript('JavaSDKDocMethodsClient/SConscript')
+returnValue += env.SConscript('JavaSDKDocMethodsService/SConscript')
+returnValue += env.SConscript('JavaSDKDocPropertiesClient/SConscript')
+returnValue += env.SConscript('JavaSDKDocPropertiesService/SConscript')
+returnValue += env.SConscript('JavaSDKDocSecurityLogonClient/SConscript')
+returnValue += env.SConscript('JavaSDKDocSecurityLogonService/SConscript')
+returnValue += env.SConscript('JavaSDKDocSecurityRsaClient/SConscript')
+returnValue += env.SConscript('JavaSDKDocSecurityRsaClient2/SConscript')
+returnValue += env.SConscript('JavaSDKDocSecurityRsaService/SConscript')
+returnValue += env.SConscript('JavaSDKDocSecuritySRPClient/SConscript')
+returnValue += env.SConscript('JavaSDKDocSecuritySRPService/SConscript')
+returnValue += env.SConscript('JavaSDKDocSignalClient/SConscript')
+returnValue += env.SConscript('JavaSDKDocSignalService/SConscript')
+
+Return('returnValue')
