ALLJOYN-1701 Modify android samples so that they work for latest Eclipse Juno and ADT plugin
The current android samples have had problems on different versions/combinations of Eclipse
and ADT plug-ins. With this change we want to make sure that, going forward, all the android samples
work on at least Eclipse Juno. More specifically, the eclipse ADT bundle that users download from
android developer webpage. The ADT version right now is 21.1 and the Eclipse version is 4.2.1 in
the bundle.

--- a/samples/android/SConscript
+++ b/samples/android/SConscript
@@ -44,7 +44,7 @@ for sample in ['simple/client',
     returnValue += env.Install('$JAVA_DISTDIR/samples/%s' % sample, 
                 ['%s/AndroidManifest.xml' % sample,
                  '%s/.classpath' % sample,
-                 '%s/default.properties' % sample,
+                 '%s/project.properties' % sample,
                  '%s/.project' % sample,
                  '%s/res' % sample,
                  '%s/src' % sample])
@@ -70,7 +70,7 @@ for sample in ['secure/sharedks/service',
 env.Install('$JAVA_TESTDIR',
             ['test/AndroidManifest.xml',
              'test/.classpath',
-             'test/default.properties',
+             'test/project.properties',
              'test/.project',
              'test/res',
              'test/src'])
